style: sort tailwind classes

--- a/src/lib/assets/app.css
+++ b/src/lib/assets/app.css
@@ -70,7 +70,7 @@
 	}
 
 	.btn-accent {
-		@apply bg-accent-9 font-semibold text-accent-fg shadow-sm hover:bg-accent-10 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-7;
+		@apply text-accent-fg bg-accent-9 font-semibold shadow-sm hover:bg-accent-10 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-accent-7;
 	}
 
 	.icon-btn {
@@ -79,7 +79,7 @@
 
 	/* Panels */
 	.panel {
-		@apply shadow-sm rounded-lg border border-neutral-6 p-6;
+		@apply rounded-lg border border-neutral-6 p-6 shadow-sm;
 	}
 }
 
