refactor: migrate common components to melt ui

--- a/src/lib/assets/app.css
+++ b/src/lib/assets/app.css
@@ -23,7 +23,8 @@
 	.text-brown-fg,
 	.text-gold-fg,
 	.text-bronze-fg,
-	.text-gray-fg {
+	.text-gray-fg,
+	.text-slate-fg {
 		@apply text-white;
 	}
 
