feat: add pick another button to dictionary spot

--- a/src/lib/shared/shared/components/button/button.pcss
+++ b/src/lib/shared/shared/components/button/button.pcss
@@ -31,6 +31,10 @@
 		}
 	}
 
+	&.transparent {
+		@apply text-accentA-11 hover:bg-accentA-3 active:bg-accentA-4;
+	}
+
 	> .iconify {
 		@apply -ml-1 mr-1 h-5 w-5;
 	}
