feat: add Card variant classic-slim

--- a/src/lib/vgui/card/card.pcss
+++ b/src/lib/vgui/card/card.pcss
@@ -8,4 +8,8 @@
 	&.classic {
 		@apply border border-neutralA-6 bg-neutralA-1 p-6 shadow-sm;
 	}
+
+	&.classic-slim {
+		@apply border border-neutralA-6 bg-neutralA-1 shadow-sm;
+	}
 }
