feat: add login page

--- a/src/lib/vgui/card/card.pcss
+++ b/src/lib/vgui/card/card.pcss
@@ -12,4 +12,8 @@
 	&.classic-slim {
 		@apply border border-neutralA-6 bg-neutralA-1 shadow-sm;
 	}
+
+	&.pure {
+		@apply bg-white p-6 shadow dark:bg-black;
+	}
 }
