refactor: make homepage to use shadcn ui

--- a/src/lib/assets/app.css
+++ b/src/lib/assets/app.css
@@ -1,12 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-@layer base {
-}
-
-@layer components {
-}
+@import '../vgui/global/global.pcss';
 
 @layer utilities {
 	.prose-here {
