--- a/src/lib/vgui/textfield/textfield.pcss
+++ b/src/lib/vgui/textfield/textfield.pcss
@@ -1,13 +1,13 @@
 .text-field-label {
-	@apply block text-sm font-medium leading-6 text-high-contrast;
+	@apply text-high-contrast block text-sm font-medium leading-6;
 }
 
 .text-field-input {
-	@apply block w-full rounded-md border-0 py-1.5 text-high-contrast shadow-sm placeholder:text-neutralA-10 sm:text-sm sm:leading-6;
-	@apply ring-1 ring-inset ring-neutralA-7;
-	@apply focus:ring-2 focus:ring-inset focus:ring-accentA-8;
+	@apply text-high-contrast placeholder:text-neutralA-10 block w-full rounded-md border-0 py-1.5 shadow-sm sm:text-sm sm:leading-6;
+	@apply ring-neutralA-7 ring-1 ring-inset;
+	@apply focus:ring-accentA-8 focus:ring-2 focus:ring-inset;
 }
 
 .text-field-help {
-	@apply mt-2 text-sm text-low-contrast;
+	@apply text-low-contrast mt-2 text-sm;
 }
